# PARVMEC

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
.github/workflows/: ci_doxygen.yaml  ci_test.yaml  ci_test_master.yaml
Sources/: CMakeLists.txt  allocate_ns.f  allocate_nunv.f  bcovar.f  bss.f  close_all_files.f  directaccess.f90  elongation.f  eqfor.f  evolve.f  fbal.f  fileout.f  forces.f  free_mem_funct3d.f  free_mem_ns.f  free_mem_nunv.f  free_persistent_mem.f  fsym_fft.f  funct3d.f  getcurmid.f  getfsq.f  gmres_mod.f  heading.f  init_geometry.f90  initialize_radial.f  interp.f  jacobian.f  jxbforce.f  lamcal.f90  load_xc_from_wout.f  magnetic_fluxes.f  mercier.f  open_output_files.f  parallel_include_module.f90  parallel_vmec_module.f90  precon2d.f  printout.f  profil1d.f  profile_functions.f  readin.f  (+9 more)
Sources/General/: CMakeLists.txt  add_fluxes.f90  alias.f  angle_constraints.f90  aspectratio.f  bcovar.f  convert.f  csplinx.f  fbal.f  forces.f  funct3d.f  getfsq.f  jacobian.f  lamcal.f90  precondn.f  realspace.f  residue.f90  scalfor.f  spectrum.f  symforce.f  symrzl.f  tomnsp_mod.f  totzsp_mod.f  vmec_dim.f  vmec_main.f  vmec_params.f  vmec_persistent.f  xstuff.f
Sources/Hessian/: CMakeLists.txt  precon2d.f
Sources/Initialization_Cleanup/: CMakeLists.txt  allocate_funct3d.f  allocate_ns.f  allocate_nunv.f  close_all_files.f  fixaray.f  free_mem_funct3d.f  free_mem_ns.f  free_mem_nunv.f  guess_axis.f  heading.f  initialize_radial.f  load_xc_from_wout.f  magnetic_fluxes.f  open_output_files.f  profil1d.f  profil3d.f  profile_functions.f  reset_params.f  vsetup.f
Sources/Input_Output/: CMakeLists.txt  TestWout.f  dump_output.f  eqfor.f  fileout.f  freeb_data.f  fsym_fft.f  fsym_invfft.f  getbrho.f  jxbforce.f  perf2likwid.f90  printout.f  read_indata.f  readin.f  restart.f  timer_sub.f  vmec_io.f  vmercier.f  write_dcon.f  wrout.f
Sources/NESTOR_vacuum/: CMakeLists.txt  analysum.f  analysum2.f  analyt.f  becoil.f  belicu.f  bextern.f  fouri.f  fourp.f  greenf.f  precal.f  scalpot.f  surface.f  tolicu.f  vac_persistent.f  vacmod.f  vacmod0.f  vacuum.f
Sources/Splines/: CMakeLists.txt  add_tension.f  getspline.f  gety2.f  initspline.f  jacprod.f  set_dual.f  setspline.f  setup_int.f  sort_data.f  splinint.f  splints.f  splintx.f  vspline.f
Sources/TimeStep/: CMakeLists.txt  eqsolve.f  evolve.f  gmres_mod.f  interp.f  parallel_include_module.f90  parallel_vmec_module.f90  restart.f  runvmec.f  vmec.f  vmec_history.f
Testing/: CMakeLists.txt
Testing/test_utilities/: CMakeLists.txt  check_file.py  vmec_test_commandline_parser.cpp  vmec_test_commandline_parser.hpp  wout_diff.cpp
Testing/tests/: CMakeLists.txt
Testing/tests/fixed_boundary_test/: CMakeLists.txt  input.test.vmec
Testing/tests/free_boundary_test/: CMakeLists.txt
Testing/tests/lasym_test/: CMakeLists.txt  input.test_asym.vmec
Testing/tests/niter_test/: CMakeLists.txt  input.test.vmec
Testing/tests/reset_test/: CMakeLists.txt
